[project]
name = "vnstock-fetch"
version = "0.1.0"
description = "VNStock data fetch utilities with enhanced CLI output."
requires-python = "==3.10.11"
dependencies = [
    "vnstock==3.2.2",
    "pandas>=2.2.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
    "tenacity>=9.0.0",
    "streamlit>=1.32.0",
    "gunicorn",
    "rich>=13.7.0"
]

[tool.uv]

[tool.ruff]
lint.select = [
    "F401",  # Unused imports
    "F841",  # Local variable assigned but never used
    "F821",  # Unused local variable
    "F811",  # Duplicate argument
    "F822",  # Unnecessary lambda
    "F823",  # Local variable referenced before assignment
    "F841",  # Local variable assigned but never used
    "W291",  # Trailing whitespace
    "W292",  # Trailing blank line
    "W293",  # Blank line contains whitespace
    "W391",  # Blank line at end of file
]
